# entra-id-sample

./: README.md
backend/: Cargo.toml  config.sample.yaml
backend/src/: config.rs  entra_id.rs  main.rs
backend/src/handlers/: extractors.rs  me.rs
entra-id-backend/: Cargo.toml  config.sample.yaml
entra-id-backend/src/: common.rs  config.rs  entra_id.rs  main.rs  state.rs
entra-id-backend/src/handlers/: extractors.rs  health_check.rs  me.rs  middleware.rs  mod.rs
entra-id-frontend/: .env.sample  README.html  README.md  index.html  package-lock.json  package.json  vite.config.ts
entra-id-frontend/src/: authConfig.ts  main.tsx  msalInstance.ts
entra-id-frontend/src/hooks/: useAuthenticated.ts  useUserProfile.ts
entra-id-frontend/src/types/: axios.d.ts
frontend/: .env.sample  .gitignore  package-lock.json  package.json
frontend/src/: App.tsx  authConfig.ts  axios.ts  main.tsx  types.ts
frontend/src/backend/: backendApiClient.ts  getBackendAccessToken.ts  index.ts
frontend/src/components/: Me.tsx  UserProfile.tsx  common.tsx  index.ts
frontend/src/graph/: getGraphAccessToken.ts  graphApiClient.ts  index.ts
frontend/src/hooks/: index.ts  useAcquireToken.ts  useSSO.ts  useUserProfile.ts
frontend/src/hooks/backend/: index.ts  useBackendAccessToken.ts  useMe.ts
frontend/src/hooks/graph/: index.ts  useGraphUserProfile.ts
